[gd_scene load_steps=17 format=2]

[ext_resource path="res://Tutorial.gd" type="Script" id=1]
[ext_resource path="res://Font_Theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/Sprite/Player/Player_Idle.png" type="Texture" id=3]
[ext_resource path="res://assets/Sprite/Player/Player_TurnR1.png" type="Texture" id=4]
[ext_resource path="res://assets/Sprite/Object/Trapv2_0.png" type="Texture" id=5]
[ext_resource path="res://assets/Sprite/Object/Fuel station.png" type="Texture" id=6]
[ext_resource path="res://assets/Sprite/Object/Upgrade.png" type="Texture" id=7]
[ext_resource path="res://assets/Sprite/tutor fuel.png" type="Texture" id=8]
[ext_resource path="res://assets/Sprite/arrow keys.png" type="Texture" id=9]
[ext_resource path="res://assets/Sprite/tutor hp.png" type="Texture" id=10]
[ext_resource path="res://assets/Sprite/door/Goal2.png" type="Texture" id=11]
[ext_resource path="res://assets/Sprite/E key.png" type="Texture" id=12]
[ext_resource path="res://assets/Sprite/door/Entryway.png" type="Texture" id=13]
[ext_resource path="res://assets/Sprite/door/Entryway Locked.png" type="Texture" id=14]
[ext_resource path="res://assets/Sprite/Tab key.png" type="Texture" id=15]
[ext_resource path="res://assets/Sprite/ESC key.png" type="Texture" id=16]

[node name="Tutorial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
color = Color( 0, 0, 0, 0.709804 )

[node name="Page1" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayerIdle" type="Sprite" parent="Page1"]
position = Vector2( 58, 71 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Page1/PlayerIdle"]
margin_left = 35.0
margin_top = -14.0
margin_right = 91.0
margin_bottom = 11.0
theme = ExtResource( 2 )
text = "Use
to BOOST"

[node name="ArrowKeys" type="Sprite" parent="Page1/PlayerIdle/Label"]
position = Vector2( 102, 40 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="ArrowKeys2" type="Sprite" parent="Page1/PlayerIdle/Label"]
position = Vector2( -8, -49 )
rotation = 3.14159
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="PlayerTurnR1" type="Sprite" parent="Page1"]
position = Vector2( 58, 192 )
rotation = 0.785398
texture = ExtResource( 4 )

[node name="ArrowKeys3" type="Sprite" parent="Page1/PlayerTurnR1"]
position = Vector2( 60.1041, -2.12133 )
rotation = 0.785398
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="ArrowKeys4" type="Sprite" parent="Page1/PlayerTurnR1"]
position = Vector2( 45.2549, -142.836 )
rotation = -2.35619
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="Page1/PlayerTurnR1"]
margin_left = 10.6066
margin_top = -38.8909
margin_right = 82.6066
margin_bottom = -5.8909
rect_rotation = -45.0
theme = ExtResource( 2 )
text = "Use
to TURN"

[node name="TutorFuel" type="Sprite" parent="Page1"]
position = Vector2( 259, 61 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Page1"]
margin_left = 246.0
margin_top = 51.0
margin_right = 363.0
margin_bottom = 102.0
theme = ExtResource( 2 )
text = "BOOSTing cost
FUEL.
So be mindful"

[node name="TutorHp" type="Sprite" parent="Page1"]
position = Vector2( 174, 182 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="Label2" type="Label" parent="Page1"]
margin_left = 243.0
margin_top = 164.0
margin_right = 360.0
margin_bottom = 215.0
theme = ExtResource( 2 )
text = "Keep an eye
on your HP.
You only got 4"

[node name="Trapv20" type="Sprite" parent="Page1"]
position = Vector2( 422, 78 )
scale = Vector2( 1.15625, 1.15625 )
texture = ExtResource( 5 )

[node name="Label3" type="Label" parent="Page1"]
margin_left = 456.0
margin_top = 51.0
margin_right = 582.0
margin_bottom = 102.0
theme = ExtResource( 2 )
text = "TRAPs will
reduce your HP
if you touch them"

[node name="FuelStation" type="Sprite" parent="Page1"]
position = Vector2( 424, 191 )
texture = ExtResource( 6 )

[node name="Label4" type="Label" parent="Page1"]
margin_left = 461.0
margin_top = 166.0
margin_right = 614.0
margin_bottom = 217.0
theme = ExtResource( 2 )
text = "FUEL_STATION
will replenish
your HP & FUEL"

[node name="Goal2" type="Sprite" parent="Page1"]
position = Vector2( 267, 295 )
texture = ExtResource( 11 )

[node name="Label5" type="Label" parent="Page1/Goal2"]
margin_left = -231.0
margin_top = -26.0
margin_right = -42.0
margin_bottom = 25.0
theme = ExtResource( 2 )
text = "Reach the GOAL
within the time limit
to earn points"
align = 2

[node name="Upgrade" type="Sprite" parent="Page1"]
position = Vector2( 536, 295 )
texture = ExtResource( 7 )

[node name="Label4" type="Label" parent="Page1/Upgrade"]
margin_left = -246.0
margin_top = -35.0
margin_right = -39.0
margin_bottom = 34.0
theme = ExtResource( 2 )
text = "Upgrade on the
UPGRADE_STATION
to overcome
difficult levels"
align = 2

[node name="Page2" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Upgrade" type="Sprite" parent="Page2"]
position = Vector2( 151, 79 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Page2"]
margin_left = 191.0
margin_top = 52.0
margin_right = 326.0
margin_bottom = 103.0
theme = ExtResource( 2 )
text = "UPGRADE_STATION
can upgrade
your equipment"

[node name="Label2" type="Label" parent="Page2"]
margin_left = 55.0
margin_top = 156.0
margin_right = 235.0
margin_bottom = 243.0
theme = ExtResource( 2 )
text = "+FUEL

Would double
your MAX_FUEL
amount"

[node name="Label3" type="Label" parent="Page2"]
margin_left = 217.0
margin_top = 156.0
margin_right = 397.0
margin_bottom = 261.0
theme = ExtResource( 2 )
text = "Fixing Tool

Would give you
tools to fix TRAPS
by pressing
when in range"

[node name="EKey" type="Sprite" parent="Page2/Label3"]
position = Vector2( 171, 133 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )

[node name="Label4" type="Label" parent="Page2"]
margin_left = 419.0
margin_top = 156.0
margin_right = 599.0
margin_bottom = 243.0
theme = ExtResource( 2 )
text = "Flashlight

Would give you
the ability to
see in dark levels"

[node name="Page3" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Entryway" type="Sprite" parent="Page3"]
position = Vector2( 215, 66 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="Page3"]
margin_left = 21.0
margin_top = 41.0
margin_right = 174.0
margin_bottom = 92.0
theme = ExtResource( 2 )
text = "Complete previous
level to proceed
and earn CREDS"
align = 2

[node name="EntrywayLocked" type="Sprite" parent="Page3"]
position = Vector2( 215, 160 )
texture = ExtResource( 14 )

[node name="Label2" type="Label" parent="Page3"]
margin_left = 21.0
margin_top = 127.0
margin_right = 174.0
margin_bottom = 196.0
theme = ExtResource( 2 )
text = "Next level is
locked until
last level is
completed"
align = 2

[node name="EntrywayLocked2" type="Sprite" parent="Page3"]
position = Vector2( 539, 107 )
texture = ExtResource( 14 )

[node name="Label3" type="Label" parent="Page3"]
margin_left = 349.0
margin_top = 92.0
margin_right = 502.0
margin_bottom = 161.0
theme = ExtResource( 2 )
text = "Collect 100 CREDS
to Win the Game"
align = 2

[node name="PlayerIdle" type="Sprite" parent="Page3"]
position = Vector2( 313, 282 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Label4" type="Label" parent="Page3"]
margin_left = 353.0
margin_top = 247.0
margin_right = 506.0
margin_bottom = 316.0
theme = ExtResource( 2 )
text = "Use     key to
zoom out
to see the maze
better"

[node name="TabKey" type="Sprite" parent="Page3/Label4"]
position = Vector2( 50, 8 )
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )

[node name="Label5" type="Label" parent="Page3"]
margin_left = 95.0
margin_top = 254.0
margin_right = 275.0
margin_bottom = 323.0
theme = ExtResource( 2 )
text = "Press     key if you
got stuck or ran out
of FUEL"
align = 2

[node name="EscKey" type="Sprite" parent="Page3/Label5"]
position = Vector2( 73, 8 )
scale = Vector2( 2, 2 )
texture = ExtResource( 16 )

[node name="Button" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -51.0
margin_top = 13.0
margin_right = -13.0
margin_bottom = 51.0
theme = ExtResource( 2 )
text = "X"

[node name="Button2" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -32.0
margin_right = -12.0
margin_bottom = -12.0
text = ">"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
